--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,14 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btnScanBLE"
+        android:id="@+id/btnConnect"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <Button
-        android:id="@+id/btnReadData"
-        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Connect"/>
+
+    <TextView
+        android:id="@+id/tvTemperature"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
 
